# trynch

./: Cargo.toml  build.rs  trynch.iss
res/: resources.gresources
res/gtk4/: linux.gresources.xml  windows.gresources.xml
res/ui/: trynch_ui.xml
res/ui/gtk4/: archive_view.ui  bottom_bar.ui  log_image_list_item.ui  log_list_item.ui  logs_view.css  logs_view.ui  main_view.css  main_view.ui  navigation_list_item.ui  theme.css  top_bar.ui  window.css  window.ui
src/: main.rs
src/bus/: event_bus.rs
src/bus/events/: button_event.rs  camera_event.rs  key_event.rs  log_event.rs  mod.rs  timer_event.rs  usb_event.rs
src/ui/gtk4/: app.rs  mod.rs
src/ui/gtk4/actions/: mod.rs  window_actions.rs
src/ui/gtk4/views/: archive_view.rs  bottom_bar.rs  log_image_list_item.rs  log_list_item.rs  logs_view.rs  main_view.rs  mod.rs  navigation_list_item.rs  top_bar.rs
src/ui/gtk4/widgets/: mod.rs  rounded_picture.rs
src/ui/gtk4/windows/: main_window.rs
src/utils/: camera.rs  detections.rs  keyboard.rs  log_reader.rs  mod.rs  random.rs  severities.rs  usb.rs
